--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="Keywords" Content="博客,blog,晏思凯,web前端,nodejs,javascript,css3,html5,adobe,微软,mongodb,yansk">
+  <meta name="Description" Content="本博客是自己通过代码构建的。是一个分享在学习中总结的全栈技术经验、提供前后端工程师常用软件、插件素材以及展示博主在生活创作和社会时事方面原创文章的网站">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-  <title>.web</title>
+  <title>晏思凯的个人博客-YANSK'S BLOG-专注WEB前端开发</title>
   <style>
     .app-init-loading-wrapper {
       display: flex;
