--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
       }
     }
   </style>
-  <script>
+  <!-- <script>
     if (/Android|webOS|iPhone|iPod|iPad|Window Phone|BlackBerry/i.test(navigator.userAgent)) {
       (function (documents, windows) {
         var domElement = documents.documentElement,
@@ -154,7 +154,7 @@
     } else {
       document.documentElement.style.fontSize = '50px'
     }
-  </script>
+  </script> -->
 </head>
 
 <body>
@@ -172,5 +172,6 @@
   </div>
   <div id="app"></div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
 
 </html>
