--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <meta name="Description" Content="本博客是自己通过代码构建的。是一个分享在学习中总结的全栈技术经验、提供前后端工程师常用软件、插件素材以及展示博主在生活创作和社会时事方面原创文章的网站">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <meta name="baidu_union_verify" content="e5b84fae3a8582172c8899e86e51a46e">
   <title>晏思凯的个人博客-YANSK'S BLOG-专注WEB前端开发</title>
   <style>
     .app-init-loading-wrapper {
