--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       height: 100vh;
       left: 0;
       top: 0;
-      font-size: .3rem;
+      font-size: 1rem;
       color: #fff;
       background-color: rgb(41, 41, 41);
       z-index: 9999999;
